--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
-    "date-fns": "^2.28.0",
+    "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
+    "lodash": "^4.17.21",
     "next": "^12.0.10",
     "next-seo": "^5.1.0",
     "next-themes": "^0.2.1",
@@ -28,6 +29,7 @@
     "remark-gfm": "^3.0.1",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
+    "slugify": "^1.6.6",
     "styled-jsx-plugin-postcss": "^4.0.1",
     "unified": "^10.1.1"
   },
