--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "allowUnreachableCode": false,
     "noFallthroughCasesInSwitch": true,
 
-    "target": "es5",
+    "target": "ESNext",
     "outDir": "out",
     "declaration": true,
     "sourceMap": true,
