--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
+    "@supabase/supabase-js": "^2.39.3",
     "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
@@ -31,6 +32,7 @@
     "remark-rehype": "^10.1.0",
     "slugify": "^1.6.6",
     "styled-jsx-plugin-postcss": "^4.0.1",
+    "swr": "^2.2.4",
     "unified": "^10.1.1"
   },
   "devDependencies": {
